--- a/src/index.css
+++ b/src/index.css
@@ -35,24 +35,6 @@ h4 {
 }
 
 
-.component{
-  /* width: 476px; */
-  /* max-height: 100vh; */
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  /* background: #fff; */
-  /* overflow: scroll; */
-  /* z-index: 10; */
-
-}
-
-.background {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  width: 476px;
-  background: #fff;
+* {
+  scroll-behavior: smooth;
 }
