--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import-normalize; /* bring in normalize.css styles */
-
+* {
+  box-sizing: border-box; /* gives padding and border from inside */
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
